# mobweb

nhf/XcfaTest/app/: CMakeLists.txt  build.gradle
nhf/XcfaTest/app/src/androidTest/java/hu/bme/aut/xcfatest/: ExampleInstrumentedTest.java
nhf/XcfaTest/app/src/main/: AndroidManifest.xml
nhf/XcfaTest/app/src/main/assets/: info.html
nhf/XcfaTest/app/src/main/assets/templates/: example1.xcfa  str_ld-str_ld.xcfa  str_str-ld_ld.xcfa  str_str-str_ld.xcfa
nhf/XcfaTest/app/src/main/cpp/: assembler.cpp  assembler.h  launch_xcfa.cpp  process.cpp  process.h
nhf/XcfaTest/app/src/main/java/hu/bme/aut/xcfatest/: EditorActivity.java  EditorActivityFragment.java  MainActivity.java  RunActivity.java  TestRunner.java  TestRunnerService.java
nhf/XcfaTest/app/src/main/java/hu/bme/aut/xcfatest/adapter/: HtmlInfoAdapter.java  MyRecyclerViewAdapter.java
nhf/XcfaTest/app/src/main/java/hu/bme/aut/xcfatest/model/: XcfaRow.java
nhf/XcfaTest/app/src/main/res/drawable/: circular_progress_bar.xml  cpu.xml  ic_launcher_foreground.xml  ic_skip_next_white_24dp.xml
nhf/XcfaTest/app/src/main/res/layout/: activity_editor.xml  activity_main.xml  activity_run.xml  content_editor.xml  content_main.xml  dialog_content.xml  dialog_onboarding.xml  fragment_editor.xml  fragment_run.xml  info_main.xml  onboarding_element.xml  rv_row.xml  xcfa.xml
nhf/XcfaTest/app/src/main/res/menu/: menu_editor.xml  menu_run.xml
nhf/XcfaTest/app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml
nhf/XcfaTest/app/src/test/java/hu/bme/aut/xcfatest/: ExampleUnitTest.java
(+94 files in other folders)
